Imagem do Everest

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ nav{display:flex;align-items:center;justify-content:space-between;gap:16px;paddi
   padding:54px 20px 38px;border-bottom:3px solid var(--primary)}
 .hero-title::before{content:"";position:absolute;inset:0;pointer-events:none;
   background:
-    url("./assets/everest-peak.png") center 25%/cover no-repeat,
+    url("./everest-peak.png") center 25%/cover no-repeat,
     radial-gradient(1200px 420px at 50% -120px, rgba(0,0,0,.35), transparent 60%);
   opacity:.16;filter:saturate(105%) contrast(105%) blur(1px);transform:scale(1.02);z-index:0}
 .hero-title::after{content:"";position:absolute;inset:0;
