--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   inset:0;
   /* 1) monta primeiro a imagem, ocupando tudo */
   background:
-    url("./everest-peak.png") left center/cover no-repeat,
+    url("./Elemento2.png") left center/cover no-repeat,
     /* 2) depois um fade na direita pra não ficar corte */
     linear-gradient(90deg, rgba(17,66,151,0) 55%, rgba(17,66,151,1) 92%),
     /* 3) e o gradiente vertical de fundo */
