--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   .btn.secondary{background:rgba(255,255,255,.08);border:1px solid rgba(255,255,255,.16);box-shadow:none}
 
   /* FAIXA COM O EVEREST (AGORA TEXTO À DIREITA) */
-  ..hero-title {
+ .hero-title {
   position: relative;
   min-height: 220px; /* aumenta a faixa */
   display: flex;
