--- a/index.html
+++ b/index.html
@@ -5,33 +5,30 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Operação Altitude 2026</title>
   <meta name="description" content="Operação Altitude 2026 — campanha de incentivos. Regulamento, metas, jornada, premiações e ranking.">
-  <meta name="theme-color" content="#0b1339">
+  <meta name="theme-color" content="#114297">
   <style>
   :root{
     --bg:#114297;
     --bg-2:#1a4dc4;
     --primary:#dd303e;
     --primary-hover:#ff5b68;
-    --text:#0b1339;              /* texto padrão escuro */
-    --text-muted:#526493;        /* texto secundário */
+    --text:#ffffff;
+    --text-muted:#cbd2ff;
     --card:#121a58;
     --line:#1e2a76;
     --radius:14px;
-    --shadow-1:0 6px 16px rgba(0,0,0,.08);
-    --shadow-2:0 10px 24px rgba(0,0,0,.12);
+    --shadow-1:0 6px 16px rgba(0,0,0,.18);
+    --shadow-2:0 10px 24px rgba(0,0,0,.22);
   }
-
   *{box-sizing:border-box}
-
   html,body{
     margin:0;
     min-height:100%;
     scroll-behavior:smooth;
-    background:#fff;             /* >>> fundo branco */
+    background:radial-gradient(1200px 600px at 70% -10%, var(--bg-2) 0%, var(--bg) 60%) fixed;
     color:var(--text);
     font-family:Inter, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Helvetica, Arial, "Noto Sans";
   }
-
   a{color:inherit;text-decoration:none}
   h1,h2,h3,h4{margin:0 0 12px}
   .lead{color:var(--text-muted);font-size:1.03rem}
@@ -82,22 +79,36 @@
   .btn:active{transform:translateY(1px)}
   .btn.secondary{background:rgba(255,255,255,.08);border:1px solid rgba(255,255,255,.16);box-shadow:none}
 
-  /* FAIXA COM O ELEMENTO COLORIDO */
-  .hero-title {
-    position: relative;
-    min-height: 220px;
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
-    padding: 0 3.5rem 20px;
-    background:
-      url("./Elemento.png") center top/cover no-repeat,
-      linear-gradient(180deg, #114297 0%, #114297 100%);
+  /* FAIXA COM O EVEREST (AGORA TEXTO À DIREITA) */
+ .hero-title {
+  position: relative;
+  min-height: 220px; /* aumenta a faixa */
+  display: flex;
+  align-items: flex-end; /* texto desce */
+  justify-content: flex-end;
+  padding: 0 3.5rem 20px; /* margem inferior pro texto */
+  background: url("./Elemento.png") center top/cover no-repeat,
+              linear-gradient(180deg, #114297 0%, #114297 100%);
+}
+  .hero-title::before{
+  content:"";
+  position:absolute;
+  inset:0;
+  /* 1) monta primeiro a imagem, ocupando tudo */
+  background:
+    url("./Elemento2.png") left center/cover no-repeat,
+    /* 2) depois um fade na direita pra não ficar corte */
+    linear-gradient(90deg, rgba(17,66,151,0) 55%, rgba(17,66,151,1) 92%),
+    /* 3) e o gradiente vertical de fundo */
+    linear-gradient(180deg, rgba(17,66,151,.25), rgba(17,66,151,.9));
+  z-index:0;
+  filter:saturate(112%) contrast(110%);
+}
   }
   .hero-title::after{
     content:"";
     position:absolute;inset:0;
-    background:linear-gradient(180deg, rgba(17,66,151,0) 50%, rgba(17,66,151,.6) 100%);
+    background:linear-gradient(180deg, rgba(17,66,151,0) 50%, rgba(17,66,151,1) 100%);
     z-index:1;
   }
   .hero-title h1{
@@ -113,8 +124,23 @@
     text-align:right;
   }
 
-  /* HERO PRINCIPAL (fundo branco) */
-  .hero{padding:30px 0 40px;background:#fff}
+  /* SUMÁRIO */
+  .toc{
+    position:sticky;top:65px;z-index:50;
+    background:rgba(7,11,40,.75);
+    backdrop-filter:saturate(120%) blur(6px);
+    border:1px solid rgba(255,255,255,.05);
+    border-radius:999px;
+    padding:.4rem .7rem;
+    margin:0 auto 20px;
+    max-width:max-content;
+    box-shadow:var(--shadow-1);
+  }
+  .toc a{color:rgba(232,237,255,.85);padding:.1rem .4rem;border-radius:8px}
+  .toc a.is-active{background:rgba(255,255,255,.07);color:#fff}
+
+  /* HERO PRINCIPAL */
+  .hero{padding:30px 0 40px}
   .hero-wrap{
     display:grid;
     grid-template-columns:1.08fr .92fr;
@@ -124,35 +150,29 @@
   .hero-left .pill{
     display:inline-flex;align-items:center;gap:8px;
     padding:.35rem .7rem;
-    border:1px dashed rgba(17,66,151,.35);
+    border:1px dashed rgba(255,255,255,.25);
     border-radius:999px;
-    background:rgba(17,66,151,.05);
+    background:rgba(0,0,0,.12);
     font-size:.8rem;
-    color:#0b1339;
   }
-  .hero-title-lg{font-size:clamp(2.1rem,3.6vw,3.4rem);line-height:1.03;margin:10px 0 8px;font-weight:900;color:#0b1339}
+  .hero-title-lg{font-size:clamp(2.1rem,3.6vw,3.4rem);line-height:1.03;margin:10px 0 8px;font-weight:900}
   .hero-ctas{display:flex;gap:12px;flex-wrap:wrap;margin-top:14px}
-
-  /* card à direita ainda azul */
   .hero-card{
-    background:linear-gradient(180deg, #101845 0%, #0b1339 100%);
-    border:1px solid rgba(255,255,255,.03);
+    background:rgba(10,13,38,.45);
+    border:1px solid rgba(255,255,255,.06);
     border-radius:var(--radius);
     padding:18px;
     box-shadow:var(--shadow-1);
-    color:#fff;
   }
   .kpi-tiles{display:grid;gap:8px;margin-top:12px}
-  .tile{background:rgba(5,8,24,.35);border:1px solid rgba(255,255,255,.03);border-radius:12px;padding:.55rem .65rem}
+  .tile{background:#111844;border:1px solid rgba(255,255,255,.03);border-radius:12px;padding:.55rem .65rem}
   .tile-label{font-size:.78rem;color:rgba(234,238,255,.6)}
   .tile-value{font-weight:600}
   .tiny{font-size:.78rem;color:rgba(203,210,255,.7);margin-top:6px}
 
-  /* SEÇÕES SOBRE FUNDO BRANCO */
-  section{padding:18px 0 30px;background:#fff}
-  .manifesto .m-head h3{color:#0b1339}
-  .manifesto .m-head .lead{color:var(--text-muted)}
-
+  /* MANIFESTO */
+  section{padding:18px 0 30px}
+  .manifesto .m-head{margin-bottom:12px}
   .m-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:16px}
   .m-card{
     background:linear-gradient(180deg, rgba(18,26,88,1) 0%, rgba(10,16,55,1) 100%);
@@ -160,7 +180,6 @@
     border-radius:var(--radius);
     overflow:hidden;
     box-shadow:var(--shadow-1);
-    color:#fff;
   }
   .m-photo{height:160px;background-size:cover;background-position:center}
   .m-body{padding:14px}
@@ -170,39 +189,41 @@
   .grid{display:grid;gap:16px}
   .cols-3{grid-template-columns:repeat(3,1fr)}
   .cols-2{grid-template-columns:repeat(2,1fr)}
-
   .card{
     background:linear-gradient(180deg, rgba(12,19,63,1) 0%, rgba(9,13,47,1) 100%);
     border:1px solid rgba(255,255,255,.018);
     border-radius:var(--radius);
     padding:16px;
     box-shadow:var(--shadow-1);
-    color:#fff;
   }
-
+  .team-card header{display:flex;align-items:center;gap:10px;margin-bottom:6px}
+  .team-card header i{width:28px;height:28px;border-radius:8px;background:rgba(255,255,255,.03);display:inline-block}
+  .team-ice{box-shadow:0 0 0 2px rgba(0,212,255,.12)}
+  .team-wind{box-shadow:0 0 0 2px rgba(68,164,255,.12)}
+  .team-fire{box-shadow:0 0 0 2px rgba(255,176,32,.12)}
   .link-metas{color:rgba(255,255,255,.85);font-weight:600;font-size:.85rem}
 
   /* TABS REGULAMENTO */
   .tabs{display:flex;gap:6px;flex-wrap:wrap;margin:12px 0 16px}
-  .tab{background:#e9edff;border:1px solid rgba(17,66,151,.1);border-radius:10px;padding:.5rem .8rem;cursor:pointer;color:#0b1339}
+  .tab{background:rgba(17,24,65,1);border:1px solid rgba(255,255,255,.02);border-radius:10px;padding:.5rem .8rem;cursor:pointer}
   .tab[aria-selected="true"]{background:var(--primary);border-color:transparent;color:#fff;box-shadow:0 4px 16px rgba(221,48,62,.25)}
   .tabpanel[hidden]{display:none}
 
-  .quick-table{width:100%;border-collapse:collapse;background:#fff;border:1px solid rgba(9,19,63,.08);border-radius:12px;overflow:hidden;margin-top:10px}
-  .quick-table th,.quick-table td{padding:.55rem .6rem;border-bottom:1px solid rgba(9,19,63,.04);text-align:center;font-size:.78rem}
-  .quick-table th{background:#eff2ff}
+  .quick-table{width:100%;border-collapse:collapse;background:rgba(8,13,40,.5);border:1px solid rgba(255,255,255,.02);border-radius:12px;overflow:hidden;margin-top:10px}
+  .quick-table th,.quick-table td{padding:.55rem .6rem;border-bottom:1px solid rgba(255,255,255,.02);text-align:center;font-size:.78rem}
+  .quick-table th{background:rgba(5,10,27,.8)}
 
   /* RANKING */
   table{width:100%;border-collapse:collapse}
-  th,td{padding:.55rem .5rem;border-bottom:1px solid rgba(11,19,57,.05);text-align:left}
-  th{background:#eff2ff}
-  tr:hover td{background:rgba(17,66,151,.03)}
+  th,td{padding:.55rem .5rem;border-bottom:1px solid rgba(255,255,255,.03);text-align:left}
+  th{background:rgba(7,10,38,.7)}
+  tr:hover td{background:rgba(255,255,255,.02)}
   .toolbar{display:flex;gap:8px;flex-wrap:wrap;margin-bottom:8px}
-  input[type="month"], select, input[type="file"]{background:#fff;color:#0b1339;border:1px solid rgba(11,19,57,.2);border-radius:10px;padding:.45rem .5rem}
+  input[type="month"], select, input[type="file"]{background:rgba(6,9,29,.6);color:#fff;border:1px solid rgba(255,255,255,.06);border-radius:10px;padding:.45rem .5rem}
 
   /* BACK TO TOP & FOOTER */
   #toTop{position:fixed;right:20px;bottom:92px;display:none;z-index:99}
-  footer{padding:28px 0;border-top:2px solid rgba(11,19,57,.05);background:#fff;text-align:center;color:#7a87b1;font-size:.78rem}
+  footer{padding:28px 0;border-top:2px solid rgba(255,255,255,.03);background:#0a0f37;text-align:center;color:rgba(203,210,255,.7);font-size:.78rem}
 
   /* RESPONSIVO */
   @media (max-width:980px){
@@ -216,6 +237,7 @@
 </head>
 <body>
 
+<!-- HEADER -->
 <header>
   <div class="container">
     <nav>
@@ -245,11 +267,11 @@
   </div>
 </div>
 
-<!-- FAIXA COM O ELEMENTO -->
+<!-- FAIXA COM O EVEREST -->
 <section class="hero-title">
-  <!-- se quiser o título aqui, é só colocar -->
-  <h1>Operação Altitude 2026</h1>
+  <h1></h1>
 </section>
+
 
 <!-- HERO PRINCIPAL -->
 <section class="hero" id="home" aria-label="Abertura">
@@ -269,7 +291,7 @@
 
     <aside class="hero-card" aria-label="Objetivo da campanha">
       <h3>Objetivo da campanha</h3>
-      <p class="lead" style="color:rgba(232,237,255,.86)">
+      <p class="lead">
         Reconhecer e valorizar a performance dos times de forma contínua, justa e inspiradora, equilibrando mérito
         individual, constância de resultados e sorteios entre os que entregam acima da média — promovendo protagonismo
         e orgulho de fazer parte da jornada.
@@ -307,7 +329,7 @@
         <div class="m-body">
           <span class="m-chip">Coragem</span>
           <h4>O primeiro passo exige decisão.</h4>
-          <p class="lead" style="color:rgba(232,237,255,.76)">Começamos no Campo Base, alinhando objetivos, pactuando metas e combinando como vamos vencer — juntos.</p>
+          <p class="lead">Começamos no Campo Base, alinhando objetivos, pactuando metas e combinando como vamos vencer — juntos.</p>
         </div>
       </article>
 
@@ -316,7 +338,7 @@
         <div class="m-body">
           <span class="m-chip">Constância</span>
           <h4>Cada avanço é sustentado por disciplina.</h4>
-          <p class="lead" style="color:rgba(232,237,255,.76)">Mensal, trimestral e anual: constância de resultado habilita experiências, sorteios e o grande prêmio.</p>
+          <p class="lead">Mensal, trimestral e anual: constância de resultado habilita experiências, sorteios e o grande prêmio.</p>
         </div>
       </article>
 
@@ -325,7 +347,7 @@
         <div class="m-body">
           <span class="m-chip">Orgulho</span>
           <h4>Chegar ao cume é transformar esforço em história.</h4>
-          <p class="lead" style="color:rgba(232,237,255,.76)">Celebramos conquistas reais — de quem entrega acima da média e puxa a corda do time.</p>
+          <p class="lead">Celebramos conquistas reais — de quem entrega acima da média e puxa a corda do time.</p>
         </div>
       </article>
     </div>
@@ -338,27 +360,18 @@
     <h3>Equipes da Expedição</h3>
     <p class="lead">Três frentes, uma jornada. Cada time com seu papel na escalada.</p>
     <div class="grid cols-3">
-      <article class="card team-ice">
-        <header style="display:flex;gap:10px;align-items:center;margin-bottom:6px">
-          <i style="width:28px;height:28px;border-radius:8px;background:rgba(255,255,255,.03);display:inline-block"></i>
-          <h4>Engenheiros do Gelo (Comercial)</h4>
-        </header>
+      <article class="team-card team-ice">
+        <header><i></i><h4>Engenheiros do Gelo (Comercial)</h4></header>
         <p>Constroem a passagem: coragem + estratégia que ligam desafios a conquistas.</p>
         <a class="link-metas" href="#tab3">Ver metas do Comercial →</a>
       </article>
-      <article class="card team-wind">
-        <header style="display:flex;gap:10px;align-items:center;margin-bottom:6px">
-          <i style="width:28px;height:28px;border-radius:8px;background:rgba(255,255,255,.03);display:inline-block"></i>
-          <h4>Domadores do Vento (Permanência)</h4>
-        </header>
+      <article class="team-card team-wind">
+        <header><i></i><h4>Domadores do Vento (Permanência)</h4></header>
         <p>Seguram a barraca: estabilidade, retenção e visão de longo prazo.</p>
         <a class="link-metas" href="#tab3">Ver metas de Permanência →</a>
       </article>
-      <article class="card team-fire">
-        <header style="display:flex;gap:10px;align-items:center;margin-bottom:6px">
-          <i style="width:28px;height:28px;border-radius:8px;background:rgba(255,255,255,.03);display:inline-block"></i>
-          <h4>Portadores do Fogo (Relacionamento)</h4>
-        </header>
+      <article class="team-card team-fire">
+        <header><i></i><h4>Portadores do Fogo (Relacionamento)</h4></header>
         <p>Aquecem a jornada: ativação, experiência e proximidade com o aluno.</p>
         <a class="link-metas" href="#tab3">Ver metas de Relacionamento →</a>
       </article>
@@ -401,7 +414,7 @@
           <tr><td>Lideranças*</td><td>⚠️ Regras específicas</td><td>⚠️ Regras específicas</td><td>⚠️ Regras específicas</td></tr>
         </tbody>
       </table>
-      <p class="tiny" style="color:#fff">*Critérios para líderes podem variar conforme diretrizes do comitê de performance.</p>
+      <p class="tiny">*Critérios para líderes podem variar conforme diretrizes do comitê de performance.</p>
     </div>
 
     <div class="tabs" role="tablist" aria-label="Regulamento">
@@ -494,12 +507,12 @@
               <li>80% da meta: 2 cupons</li>
               <li>+10 p.p. acima de 80%: +1 cupom (sem limite)</li>
             </ul>
-            <p class="tiny" style="color:#fff">Urna 1 premia constância; Urna 2 premia superação.</p>
+            <p class="tiny">Urna 1 premia constância; Urna 2 premia superação.</p>
           </div>
           <div class="card">
             <h4>Trimestral – Sorteios*</h4>
             <p>Premiação estimada: <strong>R$ 25.000,00</strong> por trimestre.</p>
-            <p class="tiny" style="color:#fff">*Vinculado ao atingimento das metas do período.</p>
+            <p class="tiny">*Vinculado ao atingimento das metas do período.</p>
           </div>
           <div class="card" style="grid-column:1/-1">
             <h4>Anual – Grandes Reconhecimentos*</h4>
@@ -508,7 +521,7 @@
               <li><strong>4</strong> viagens com acompanhante</li>
               <li><strong>1</strong> automóvel 0 km</li>
             </ul>
-            <p class="tiny" style="color:#fff">*Para participantes habilitados e condicionado à meta anual.</p>
+            <p class="tiny">*Para participantes habilitados e condicionado à meta anual.</p>
           </div>
         </div>
       </div>
@@ -570,7 +583,7 @@
         <tbody></tbody>
       </table>
     </div>
-    <p class="tiny" style="color:#fff">Modelo CSV: <code>mes(YYYY-MM),nome,gerencia,score,perc_meta,cupons</code></p>
+    <p class="tiny">Modelo CSV: <code>mes(YYYY-MM),nome,gerencia,score,perc_meta,cupons</code></p>
   </div>
 </section>
 
@@ -613,6 +626,18 @@
   const b=document.getElementById('toTop');
   window.addEventListener('scroll',()=>{b.style.display=window.scrollY>800?'block':'none';},{passive:true});
   b.addEventListener('click',()=>window.scrollTo({top:0,behavior:'smooth'}));
+})();
+
+/* scroll spy */
+(function(){
+  const links=[...document.querySelectorAll('#toc a')];
+  const secs=links.map(a=>document.querySelector(a.getAttribute('href'))).filter(Boolean);
+  const io=new IntersectionObserver((entries)=>{
+    const vis=entries.filter(e=>e.isIntersecting).sort((a,b)=>b.intersectionRatio-a.intersectionRatio)[0];
+    if(!vis) return;
+    links.forEach(a=>a.classList.toggle('is-active', a.getAttribute('href')==='#'+vis.target.id));
+  },{rootMargin:"-50% 0px -45% 0px"});
+  secs.forEach(s=>io.observe(s));
 })();
 
 /* tabs regulamento + deep link */
