--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <meta name="description" content="Operação Altitude 2026 — campanha de incentivos. Regulamento, metas, jornada, premiações e ranking.">
   <meta name="theme-color" content="#114297">
   <style>
+  <!doctype html>
+<html lang="pt-BR">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Operação Altitude 2026</title>
+  <meta name="description" content="Operação Altitude 2026 — campanha de incentivos. Regulamento, metas, jornada, premiações e ranking.">
+  <meta name="theme-color" content="#114297">
+  <style>
   :root{
     --bg:#114297;
     --bg-2:#1a4dc4;
@@ -25,13 +34,13 @@
     margin:0;
     min-height:100%;
     scroll-behavior:smooth;
-    background:radial-gradient(1200px 600px at 70% -10%, var(--bg-2) 0%, var(--bg) 60%) fixed;
-    color:var(--text);
+    background:#ffffff; /* fundo branco */
+    color:#0f1535;
     font-family:Inter, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Helvetica, Arial, "Noto Sans";
   }
   a{color:inherit;text-decoration:none}
   h1,h2,h3,h4{margin:0 0 12px}
-  .lead{color:var(--text-muted);font-size:1.03rem}
+  .lead{color:#4a5373;font-size:1.03rem}
   .container{max-width:1180px;margin:0 auto;padding:0 20px}
 
   /* HEADER */
@@ -79,31 +88,29 @@
   .btn:active{transform:translateY(1px)}
   .btn.secondary{background:rgba(255,255,255,.08);border:1px solid rgba(255,255,255,.16);box-shadow:none}
 
-  /* FAIXA COM O EVEREST (AGORA TEXTO À DIREITA) */
- .hero-title {
-  position: relative;
-  min-height: 220px; /* aumenta a faixa */
-  display: flex;
-  align-items: flex-end; /* texto desce */
-  justify-content: flex-end;
-  padding: 0 3.5rem 20px; /* margem inferior pro texto */
-  background: url("./Elemento.png") center top/cover no-repeat,
-              linear-gradient(180deg, #114297 0%, #114297 100%);
-}
+  /* FAIXA COM O ELEMENTO – agora completa */
+  .hero-title {
+    position: relative;
+    min-height: 220px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-end;
+    padding: 0 3.5rem 20px;
+    background:
+      url("./Elemento.png") center top/cover no-repeat,
+      linear-gradient(180deg, #114297 0%, #114297 100%);
+  }
+  /* camada que tinha sumido */
   .hero-title::before{
-  content:"";
-  position:absolute;
-  inset:0;
-  /* 1) monta primeiro a imagem, ocupando tudo */
-  background:
-    url("./Elemento2.png") left center/cover no-repeat,
-    /* 2) depois um fade na direita pra não ficar corte */
-    linear-gradient(90deg, rgba(17,66,151,0) 55%, rgba(17,66,151,1) 92%),
-    /* 3) e o gradiente vertical de fundo */
-    linear-gradient(180deg, rgba(17,66,151,.25), rgba(17,66,151,.9));
-  z-index:0;
-  filter:saturate(112%) contrast(110%);
-}
+    content:"";
+    position:absolute;
+    inset:0;
+    background:
+      url("./Elemento2.png") left center/cover no-repeat,
+      linear-gradient(90deg, rgba(17,66,151,0) 55%, rgba(17,66,151,1) 92%),
+      linear-gradient(180deg, rgba(17,66,151,.25), rgba(17,66,151,.9));
+    z-index:0;
+    filter:saturate(112%) contrast(110%);
   }
   .hero-title::after{
     content:"";
@@ -124,23 +131,8 @@
     text-align:right;
   }
 
-  /* SUMÁRIO */
-  .toc{
-    position:sticky;top:65px;z-index:50;
-    background:rgba(7,11,40,.75);
-    backdrop-filter:saturate(120%) blur(6px);
-    border:1px solid rgba(255,255,255,.05);
-    border-radius:999px;
-    padding:.4rem .7rem;
-    margin:0 auto 20px;
-    max-width:max-content;
-    box-shadow:var(--shadow-1);
-  }
-  .toc a{color:rgba(232,237,255,.85);padding:.1rem .4rem;border-radius:8px}
-  .toc a.is-active{background:rgba(255,255,255,.07);color:#fff}
-
   /* HERO PRINCIPAL */
-  .hero{padding:30px 0 40px}
+  .hero{padding:30px 0 40px;background:#ffffff;}
   .hero-wrap{
     display:grid;
     grid-template-columns:1.08fr .92fr;
@@ -150,28 +142,39 @@
   .hero-left .pill{
     display:inline-flex;align-items:center;gap:8px;
     padding:.35rem .7rem;
-    border:1px dashed rgba(255,255,255,.25);
+    border:1px dashed rgba(17,66,151,.35);
     border-radius:999px;
-    background:rgba(0,0,0,.12);
+    background:rgba(17,66,151,.07);
     font-size:.8rem;
+    color:#0f1535;
   }
-  .hero-title-lg{font-size:clamp(2.1rem,3.6vw,3.4rem);line-height:1.03;margin:10px 0 8px;font-weight:900}
+  .hero-title-lg{font-size:clamp(2.1rem,3.6vw,3.4rem);line-height:1.03;margin:10px 0 8px;font-weight:900;color:#0f1535}
   .hero-ctas{display:flex;gap:12px;flex-wrap:wrap;margin-top:14px}
   .hero-card{
-    background:rgba(10,13,38,.45);
+    background:linear-gradient(180deg, #0f1535 0%, #091538 100%);
     border:1px solid rgba(255,255,255,.06);
     border-radius:var(--radius);
     padding:18px;
     box-shadow:var(--shadow-1);
+    color:#fff;
   }
   .kpi-tiles{display:grid;gap:8px;margin-top:12px}
-  .tile{background:#111844;border:1px solid rgba(255,255,255,.03);border-radius:12px;padding:.55rem .65rem}
+  .tile{background:rgba(7,11,40,.35);border:1px solid rgba(255,255,255,.03);border-radius:12px;padding:.55rem .65rem}
   .tile-label{font-size:.78rem;color:rgba(234,238,255,.6)}
   .tile-value{font-weight:600}
   .tiny{font-size:.78rem;color:rgba(203,210,255,.7);margin-top:6px}
 
+  /* SEÇÕES GERAIS */
+  section{padding:18px 0 30px;}
+  .manifesto,
+  #equipes,
+  #jornada,
+  #regulamento,
+  #premios,
+  #ranking,
+  #faq{background:#ffffff;}
+
   /* MANIFESTO */
-  section{padding:18px 0 30px}
   .manifesto .m-head{margin-bottom:12px}
   .m-grid{display:grid;grid-template-columns:repeat(3,1fr);gap:16px}
   .m-card{
@@ -180,6 +183,7 @@
     border-radius:var(--radius);
     overflow:hidden;
     box-shadow:var(--shadow-1);
+    color:#fff;
   }
   .m-photo{height:160px;background-size:cover;background-position:center}
   .m-body{padding:14px}
@@ -195,6 +199,7 @@
     border-radius:var(--radius);
     padding:16px;
     box-shadow:var(--shadow-1);
+    color:#fff;
   }
   .team-card header{display:flex;align-items:center;gap:10px;margin-bottom:6px}
   .team-card header i{width:28px;height:28px;border-radius:8px;background:rgba(255,255,255,.03);display:inline-block}
@@ -205,25 +210,25 @@
 
   /* TABS REGULAMENTO */
   .tabs{display:flex;gap:6px;flex-wrap:wrap;margin:12px 0 16px}
-  .tab{background:rgba(17,24,65,1);border:1px solid rgba(255,255,255,.02);border-radius:10px;padding:.5rem .8rem;cursor:pointer}
+  .tab{background:rgba(17,24,65,1);border:1px solid rgba(255,255,255,.02);border-radius:10px;padding:.5rem .8rem;cursor:pointer;color:#fff}
   .tab[aria-selected="true"]{background:var(--primary);border-color:transparent;color:#fff;box-shadow:0 4px 16px rgba(221,48,62,.25)}
   .tabpanel[hidden]{display:none}
 
   .quick-table{width:100%;border-collapse:collapse;background:rgba(8,13,40,.5);border:1px solid rgba(255,255,255,.02);border-radius:12px;overflow:hidden;margin-top:10px}
   .quick-table th,.quick-table td{padding:.55rem .6rem;border-bottom:1px solid rgba(255,255,255,.02);text-align:center;font-size:.78rem}
-  .quick-table th{background:rgba(5,10,27,.8)}
+  .quick-table th{background:rgba(5,10,27,.8);color:#fff}
 
   /* RANKING */
   table{width:100%;border-collapse:collapse}
   th,td{padding:.55rem .5rem;border-bottom:1px solid rgba(255,255,255,.03);text-align:left}
-  th{background:rgba(7,10,38,.7)}
+  th{background:rgba(7,10,38,.7);color:#fff}
   tr:hover td{background:rgba(255,255,255,.02)}
   .toolbar{display:flex;gap:8px;flex-wrap:wrap;margin-bottom:8px}
   input[type="month"], select, input[type="file"]{background:rgba(6,9,29,.6);color:#fff;border:1px solid rgba(255,255,255,.06);border-radius:10px;padding:.45rem .5rem}
 
   /* BACK TO TOP & FOOTER */
   #toTop{position:fixed;right:20px;bottom:92px;display:none;z-index:99}
-  footer{padding:28px 0;border-top:2px solid rgba(255,255,255,.03);background:#0a0f37;text-align:center;color:rgba(203,210,255,.7);font-size:.78rem}
+  footer{padding:28px 0;border-top:2px solid rgba(11,19,49,.08);background:#ffffff;text-align:center;color:#6a759c;font-size:.78rem}
 
   /* RESPONSIVO */
   @media (max-width:980px){
@@ -233,6 +238,15 @@
     .hero-title{justify-content:center;text-align:center}
     .hero-title h1{text-align:center}
   }
+  </style>
+</head>
+<body>
+  <!-- resto do HTML fica igual ao que você já colou -->
+  <!-- ... (mantém todo o conteúdo que você já tem: hero, manifesto, equipes, jornada, regulamento, etc.) ... -->
+
+  <!-- vou pular o corpo porque ele está idêntico ao seu; só alteramos o CSS lá em cima -->
+</body>
+</html>
   </style>
 </head>
 <body>
