--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       position:relative;
       min-height:200px;
       background:
-        url("./Elemento.png") center top/cover no-repeat,
+        url("./Topo.png") center top/cover no-repeat,
         linear-gradient(180deg,#114297 0%,#114297 100%);
       display:flex;
       align-items:flex-end;
@@ -124,7 +124,7 @@
       position:absolute;
       inset:0;
       background:
-        url("./Elemento2.png") left center/cover no-repeat,
+        url("./Topo.png") left center/cover no-repeat,
         linear-gradient(90deg,rgba(17,66,151,0) 45%,rgba(17,66,151,1) 92%);
       z-index:0;
     }
