--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       position:relative;
       min-height:200px;
       background:
-        url("./Topo.png") center top/cover no-repeat,
+        url("./Topo.png") center bottom / cover no-repeat,
         linear-gradient(180deg,#114297 0%,#114297 100%);
       display:flex;
       align-items:flex-end;
