Ajuste de topo 19_01

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
     /* faixa do topo com montanhas */
     .hero-title{
       position:relative;
-      min-height:200px;
+      min-height:320px;
       background:
-        url("./Topo.png") center bottom / cover no-repeat,
+        url("./Topo.png") bottom / contain no-repeat,
         linear-gradient(180deg,#114297 0%,#114297 100%);
       display:flex;
       align-items:flex-end;
