--- a/index.html
+++ b/index.html
@@ -113,9 +113,8 @@
       position:relative;
       min-height:320px;
       background:
-        url("./Topo.png") bottom / contain no-repeat,
-        linear-gradient(180deg,#114297 0%,#114297 100%);
-      display:flex;
+        url("./Topo.png") center bottom / 120% no-repeat,
+              display:flex;
       align-items:flex-end;
       padding:0 20px 20px;
     }
