Ajuste de topo 19_01
Montanha sumiu, correção para voltar a aparecer

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       position:relative;
       min-height:320px;
       background:
-        url("./Topo.png") center bottom / 120% no-repeat,
+      url("./Topo.png") center bottom / 120% no-repeat;
               display:flex;
       align-items:flex-end;
       padding:0 20px 20px;
