--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
     /* faixa do topo com montanhas */
     .hero-title{
       position:relative;
-      min-height:320px;
+      min-height:360px;
       background:
-      url("./Topo.png") center bottom / 120% no-repeat;
+      url("./Topo.png") center 80% / contain no-repeat;
               display:flex;
       align-items:flex-end;
       padding:0 20px 20px;
@@ -368,7 +368,6 @@
 
   <!-- faixa visual -->
   <section class="hero-title">
-    <h1>Operação Altitude 2026</h1>
   </section>
 
   <!-- hero principal -->
