--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
   <!-- barra fixa -->
   <div class="cta-bar">
     <div class="wrap">
-      <a class="btn" href="https://forms.gle/oWtweD2dTn8FSu4N7" target="_blank" rel="noopener">Assinar regulamento</a>
+      <a class="btn" href="https://forms.gle/oWtweD2dTn8FSu4N7" target="_blank" rel="noopener">Regulamento</a>
       <a class="btn secondary" href="#ranking">Ver ranking do mês</a>
     </div>
   </div>
@@ -381,8 +381,7 @@
           A Operação Altitude reconhece performance com premiações semanais, mensais, trimestrais e um grande prêmio anual.
         </p>
         <div class="hero-ctas">
-          <a class="btn" href="https://forms.gle/oWtweD2dTn8FSu4N7" target="_blank" rel="noopener">Assinar regulamento</a>
-          <a class="btn secondary" href="#ranking">Ver ranking</a>
+          <a class="btn" href="https://forms.gle/oWtweD2dTn8FSu4N7" target="_blank" rel="noopener">Regulamento</a>
         </div>
       </div>
       <aside class="hero-card" aria-label="Objetivo da campanha">
