--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
     <div class="container hero-wrap">
       <div>
         <span class="pill">Campanha de Incentivos • 01 jan – 31 dez 2026</span>
-        <h2 class="hero-title-lg">Você ainda não conhece os seus limites.</h2>
+        <h2 class="hero-title-lg">Você ainda não conhece os seus limites!</h2>
         <p class="lead">
           2026 será o nosso Everest. Uma jornada coletiva rumo ao topo, com disciplina, trabalho em equipe e superação.
           A Operação Altitude reconhece performance com premiações semanais, mensais, trimestrais e um grande prêmio anual.
