--- a/index.html
+++ b/index.html
@@ -390,19 +390,19 @@
         </p>
         <div class="kpi-tiles">
           <div class="tile">
-            <div class="tile-label">Vigência</div>
-            <div class="tile-value">01/01/2026 → 31/12/2026</div>
+            <div class="tile-label"> Meta Janeiro 2026</div>
+            <div class="tile-value">R$ 11.100.828</div>
           </div>
           <div class="tile">
-            <div class="tile-label">Gatilho</div>
-            <div class="tile-value">Metas por ciclo</div>
+            <div class="tile-label">Realizado</div>
+            <div class="tile-value">R$ 5.838.753</div>
           </div>
           <div class="tile">
-            <div class="tile-label">Público</div>
-            <div class="tile-value">Comercial, Permanência, Relacionamento, Lideranças*</div>
+            <div class="tile-label">Tendência de Atingimento</div>
+            <div class="tile-value">79,34%</div>
           </div>
         </div>
-        <p class="tiny">*Líderes podem ter regras específicas.</p>
+        <p class="tiny">*Considerando receita do Presencial.</p>
       </aside>
     </div>
   </section>
