--- a/index.html
+++ b/index.html
@@ -383,22 +383,22 @@
           <a class="btn" href="https://forms.gle/oWtweD2dTn8FSu4N7" target="_blank" rel="noopener">Regulamento</a>
         </div>
       </div>
-      <aside class="hero-card" aria-label="Objetivo da campanha">
-        <h3 style="margin-top:0">Objetivo da campanha</h3>
+      <aside class="hero-card" aria-label="Resultado acumulado da Operação Altitude">
+        <h3 style="margin-top:0">Resultado acumulado da Operação Altitude</h3>
         <p class="lead" style="color:rgba(234,238,255,.92);max-width:none">
-          Reconhecer e valorizar a performance dos times de forma contínua, justa e inspiradora, equilibrando mérito individual, constância de resultados e sorteios entre quem entrega acima da média.
+          Receita acumulada das operações elegíveis da campanha, mostrando o avanço coletivo rumo à meta do período.
         </p>
         <div class="kpi-tiles">
           <div class="tile">
-            <div class="tile-label"> Meta Janeiro 2026</div>
+            <div class="tile-label"> Meta do período (Janeiro 2026)</div>
             <div class="tile-value">R$ 11.100.828</div>
           </div>
           <div class="tile">
-            <div class="tile-label">Realizado</div>
+            <div class="tile-label">Receita acumulada</div>
             <div class="tile-value">R$ 5.838.753</div>
           </div>
           <div class="tile">
-            <div class="tile-label">Tendência de Atingimento</div>
+            <div class="tile-label">Ritmo atual da escalada</div>
             <div class="tile-value">79,34%</div>
           </div>
         </div>
