--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
           <a class="btn" href="https://forms.gle/oWtweD2dTn8FSu4N7" target="_blank" rel="noopener">Regulamento</a>
         </div>
       </div>
-      <aside class="hero-card" aria-label="Resultado acumulado da Operação Altitude">
+      <aside class="hero-card" aria-label="Resultado acumulado da Operação Altitude.">
         <h3 style="margin-top:0">Resultado acumulado da Operação Altitude</h3>
         <p class="lead" style="color:rgba(234,238,255,.92);max-width:none">
           Receita acumulada das operações elegíveis da campanha, mostrando o avanço coletivo rumo à meta do período.
