--- a/index.html
+++ b/index.html
@@ -171,13 +171,14 @@
       margin-top:14px;
       flex-wrap:wrap;
     }
-    .hero-card{
-      background:linear-gradient(180deg,#0f1535 0%,#091538 100%);
-      border-radius:var(--radius);
-      padding:18px;
-      color:#fff;
-      box-shadow:var(--shadow-1);
-    }
+   .hero-card{
+  position: relative;
+  background:linear-gradient(180deg,#0f1535 0%,#091538 100%);
+  border-radius:var(--radius);
+  padding:18px;
+  color:#fff;
+  box-shadow:var(--shadow-1);
+}
     .kpi-tiles{
       display:grid;
       gap:8px;
@@ -403,6 +404,7 @@
           </div>
         </div>
         <p class="tiny">*Considerando receita do Presencial.</p>
+        <img src="Icone_escalada.png" class="icone-campanha" alt="Ícone da Operação Altitude">
       </aside>
     </div>
   </section>
