--- a/index.html
+++ b/index.html
@@ -179,6 +179,13 @@
   color:#fff;
   box-shadow:var(--shadow-1);
 }
+    .icone-campanha{
+  position: absolute;
+  bottom: 16px;
+  right: 16px;
+  width: 72px;
+  opacity: 0.9;
+}
     .kpi-tiles{
       display:grid;
       gap:8px;
