--- a/index.html
+++ b/index.html
@@ -171,13 +171,13 @@
       margin-top:14px;
       flex-wrap:wrap;
     }
-   .hero-card{
+  .hero-card{
   position: relative;
-  background:linear-gradient(180deg,#0f1535 0%,#091538 100%);
-  border-radius:var(--radius);
-  padding:18px;
-  color:#fff;
-  box-shadow:var(--shadow-1);
+  background: #D4D801;
+  border-radius: var(--radius);
+  padding: 18px;
+  color: #0f1535;
+  box-shadow: var(--shadow-1);
 }
     .icone-campanha{
   position: absolute;
