--- a/index.html
+++ b/index.html
@@ -376,6 +376,9 @@
       .cta-bar .wrap{width:96%;justify-content:center}
     }
     /* AJUSTES DO PAINEL (cole acima do </style>) */
+}
+  /* ===== AJUSTES DO PAINEL ===== */
+
 .hero-card{
   border-radius: 16px;
   box-shadow: 0 12px 28px rgba(0,0,0,.18);
@@ -383,7 +386,7 @@
   overflow: hidden;
 }
 
-/* faixa de destaque no topo */
+/* faixa de destaque */
 .hero-card::after{
   content:"";
   position:absolute;
@@ -392,15 +395,16 @@
   right:0;
   height:3px;
   background: rgba(212,216,1,.9);
-  opacity:.9;
   pointer-events:none;
 }
 
-/* tiles mais “dashboard” */
-.hero-card .kpi-tiles{ gap:10px; }
+/* tiles */
+.hero-card .kpi-tiles{
+  gap:10px;
+}
 
 .hero-card .tile{
-  padding: 12px 12px;
+  padding: 12px;
   border-radius: 14px;
   background: rgba(255,255,255,.07);
   border: 1px solid rgba(255,255,255,.12);
@@ -415,16 +419,15 @@
 .hero-card .tile-value{
   font-size: 1.05rem;
   font-weight: 850;
-  letter-spacing: .2px;
 }
 
-/* rodapé mais legível */
+/* rodapé */
 .hero-card .tiny{
   margin-top: 10px;
   color: rgba(220,228,255,.72);
 }
 
-/* ícone vira marca d’água e para de competir com os números */
+/* ícone como marca d’água */
 .hero-card .icone-campanha{
   width: 96px;
   opacity: 0.10;
