--- a/index.html
+++ b/index.html
@@ -631,19 +631,20 @@
           <div class="grid cols-2">
             <div class="card">
               <h4>Semanal</h4>
-              <p>R$ 200,00 em crédito iFood para o melhor desempenho.</p>
+              <p>R$ 200,00 em vale presentes para o melhor desempenho.</p>
             </div>
             <div class="card">
               <h4>Mensal – ranking</h4>
               <ul>
                 <li>1º: R$ 1.000,00</li>
-                <li>2º: R$ 800,00</li>
-                <li>3º: R$ 600,00</li>
+                <li>2º: R$ 700,00</li>
+                <li>3º: R$ 500,00</li>
               </ul>
             </div>
             <div class="card">
               <h4>Mensal – urnas</h4>
-              <p>70% da meta: 1 cupom. 80% da meta: 2 cupons. A cada 10 p.p. acima de 80% você ganha cupom extra.</p>
+              <p>Urna Expedição (70% a 99%): 1 cupom a cada 10 p.p.</p>
+               <p>Urna Everest (≥100%): 1 cupom inicial + 5 cupons a cada 5 p.p. acima de 100% (ex.: 105% = 5 adicionais, 110% = 10 adicionais…)</p>
             </div>
             <div class="card">
               <h4>Trimestral</h4>
@@ -653,7 +654,8 @@
               <h4>Anual</h4>
               <ul>
                 <li>4 motos</li>
-                <li>4 viagens com acompanhante</li>
+                <li>2 viagens com acompanhante nacionais</li>
+                <li>2 viagens com acompanhante internacionais (America do Sul)</li>
                 <li>1 automóvel 0 km</li>
               </ul>
               <p class="tiny">Condicionado à meta anual e à habilitação.</p>
