--- a/index.html
+++ b/index.html
@@ -289,6 +289,83 @@
     }
 
     section{padding:20px 0 28px}
+    /* destaques da semana */
+.highlights{
+  padding:10px 0 28px;
+}
+.highlights-head{
+  display:flex;
+  align-items:flex-end;
+  justify-content:space-between;
+  gap:12px;
+  flex-wrap:wrap;
+  margin-bottom:10px;
+}
+.highlights-head .lead{
+  margin:0;
+  max-width:720px;
+}
+.h-grid{
+  display:grid;
+  grid-template-columns:repeat(4,1fr);
+  gap:12px;
+}
+.h-card{
+  background:linear-gradient(180deg,#0c123f 0%,#090d2f 100%);
+  border-radius:16px;
+  padding:14px;
+  color:#fff;
+  box-shadow:var(--shadow-1);
+  border:1px solid rgba(255,255,255,.05);
+  min-height:110px;
+}
+.h-top{
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  gap:10px;
+  margin-bottom:8px;
+}
+.h-icon{
+  width:38px;
+  height:38px;
+  border-radius:12px;
+  background:rgba(255,255,255,.06);
+  border:1px solid rgba(255,255,255,.08);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  overflow:hidden;
+}
+.h-icon img{
+  width:26px;
+  height:26px;
+  object-fit:contain;
+}
+.h-title{
+  font-size:.82rem;
+  opacity:.85;
+  margin:0;
+}
+.h-value{
+  font-size:1.15rem;
+  font-weight:900;
+  margin:0;
+}
+.h-note{
+  font-size:.72rem;
+  opacity:.72;
+  margin-top:8px;
+}
+
+/* responsivo destaques */
+@media (max-width:980px){
+  .h-grid{grid-template-columns:1fr 1fr}
+}
+@media (max-width:520px){
+  .h-grid{grid-template-columns:1fr}
+}
+
     h3{margin-bottom:6px}
 
     .m-grid{
@@ -501,6 +578,71 @@
       </aside>
     </div>
   </section>
+<section class="highlights" id="destaques">
+  <div class="container">
+    <div class="highlights-head">
+      <div>
+        <h3>Destaques da semana</h3>
+        <p class="lead">Resumo rápido do que mais puxou o time pra cima nos últimos 7 dias.</p>
+      </div>
+      <a class="btn secondary" href="#ranking">Ver ranking</a>
+    </div>
+
+    <div class="h-grid">
+      <article class="h-card">
+        <div class="h-top">
+          <div>
+            <p class="h-title">Maior avanço</p>
+            <p class="h-value">+4,2 p.p.</p>
+          </div>
+          <div class="h-icon">
+            <img src="./assets/icones/progresso.png" alt="">
+          </div>
+        </div>
+        <div class="h-note">Comparado à semana anterior.</div>
+      </article>
+
+      <article class="h-card">
+        <div class="h-top">
+          <div>
+            <p class="h-title">Destaque do time</p>
+            <p class="h-value">Permanência</p>
+          </div>
+          <div class="h-icon">
+            <img src="./assets/icones/bandeira.png" alt="">
+          </div>
+        </div>
+        <div class="h-note">Maior consistência no período.</div>
+      </article>
+
+      <article class="h-card">
+        <div class="h-top">
+          <div>
+            <p class="h-title">Recorde semanal</p>
+            <p class="h-value">R$ 1,2M</p>
+          </div>
+          <div class="h-icon">
+            <img src="./assets/icones/rocket.png" alt="">
+          </div>
+        </div>
+        <div class="h-note">Maior receita em 7 dias.</div>
+      </article>
+
+      <article class="h-card">
+        <div class="h-top">
+          <div>
+            <p class="h-title">Meta mais perto</p>
+            <p class="h-value">79,34%</p>
+          </div>
+          <div class="h-icon">
+            <img src="./assets/icones/alvo.png" alt="">
+          </div>
+        </div>
+        <div class="h-note">Termômetro atualizado no topo.</div>
+      </article>
+    </div>
+  </div>
+</section>
 
   <section id="sobre">
     <div class="container">
