--- a/index.html
+++ b/index.html
@@ -647,6 +647,7 @@
   <section id="sobre">
     <div class="container">
       <h3>Manifesto Altitude</h3>
+      <p class="tiny">Campo Base, rota e cume. Tudo explicado em um lugar só.</p>
       <p class="lead">Nossa campanha traduz coragem, constância e espírito de equipe. Cada ciclo é um passo rumo ao cume.</p>
       <div class="m-grid">
         <article class="m-card">
@@ -680,6 +681,7 @@
   <section id="equipes">
     <div class="container">
       <h3>Equipes da Expedição</h3>
+      <p class="tiny">Clique em “Ver metas” para ir direto ao regulamento.</p>
       <p class="lead">Três frentes, uma jornada. Cada time com seu papel na escalada.</p>
       <div class="grid cols-3">
         <article class="card team-card">
@@ -867,6 +869,16 @@
         </div>
       </div>
     </div>
+    <div class="container" style="padding-top:10px">
+  <div class="card" style="display:flex; justify-content:space-between; align-items:center; gap:12px; flex-wrap:wrap;">
+    <div>
+      <h4 style="margin:0 0 6px 0">Pronto pra subir de nível?</h4>
+      <p class="tiny" style="margin:0">Assine o regulamento e acompanhe seu avanço no ranking.</p>
+    </div>
+    <a class="btn" href="https://forms.gle/oWtweD2dTn8FSu4N7" target="_blank" rel="noopener">Abrir regulamento</a>
+  </div>
+</div>
+
   </section>
 
   <section id="premios">
