--- a/index.html
+++ b/index.html
@@ -287,6 +287,14 @@
       pointer-events:none;
       z-index:1;
     }
+    /* tiny em fundo claro */
+body .tiny{
+  color:#4a5373;
+}
+    /* tiny dentro do painel escuro continua claro */
+.hero-card .tiny{
+  color:rgba(220,228,255,.72);
+}
 
     section{padding:20px 0 28px}
     /* destaques da semana */
