--- a/index.html
+++ b/index.html
@@ -876,10 +876,10 @@ body .tiny{
         <div class="card">
           <h4>Público-alvo</h4>
           <ul>
-            <li>Consultores comerciais</li>
-            <li>Equipes de permanência</li>
-            <li>Equipe de relacionamento</li>
-            <li>Lideranças – podem ter regras próprias</li>
+            <li>Esta campanha é destinada aos colaboradores que atuam como Consultores Comerciais, integrantes das Equipes de Permanência e da Equipe de Relacionamento, desde que estejam em atividade durante o período de vigência da campanha.</li>
+            <li>Ficam excluídos os cargos administrativos e demais funções que não possuam metas estabelecidas para o ano de 2026.</li>
+            
+            <li>Consulte as regras de elegibilidade em nosso regulamento</li>
           </ul>
           <p class="tiny">É preciso aderir ao regulamento e ter meta definida pela gerência.</p>
         </div>
