--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@ body .tiny{
             <li>Esta campanha é destinada aos colaboradores que atuam como Consultores Comerciais, integrantes das Equipes de Permanência e da Equipe de Relacionamento, desde que estejam em atividade durante o período de vigência da campanha.</li>
             <li>Ficam excluídos os cargos administrativos e demais funções que não possuam metas estabelecidas para o ano de 2026.</li>
             
-            <li>Consulte as regras de elegibilidade em nosso regulamento</li>
+            <li>Consulte as regras de elegibilidade em nosso regulamento.</li>
           </ul>
           
         </div>
