--- a/index.html
+++ b/index.html
@@ -906,9 +906,9 @@ body .tiny{
         <div class="card">
           <h4>Dinâmica</h4>
           <ul>
-            <li>Meta global da gerência habilita os sorteios do time.</li>
+            <li>Meta de receita da diretoria habilita os sorteios do time.</li>
             <li>Quem bate a meta individual recebe cupons.</li>
-            <li>Sem meta global, o colaborador recebe só o reconhecimento mensal.</li>
+            <li>Sem meta de receita da diretoria, o colaborador recebe só o reconhecimento mensal.</li>
           </ul>
         </div>
       </div>
