--- a/index.html
+++ b/index.html
@@ -917,9 +917,9 @@ body .tiny{
         <div class="card">
           <h4>Governança</h4>
           <ul>
-            <li>Comitê de performance mensal para validar resultados.</li>
-            <li>Comunicação centralizada neste site.</li>
-            <li>Assinatura do regulamento por todos.</li>
+            <li>A campanha contará com um Comitê de Performance, que se reunirá mensalmente com o objetivo de validar e homologar os resultados apurados.</li>
+            <li>Toda a comunicação oficial relacionada à campanha será realizada de forma centralizada por meio deste site, sendo este o canal válido para divulgação de informações, atualizações e comunicados.</li>
+            <li>A participação na campanha está condicionada à leitura e à assinatura deste regulamento, sendo obrigatória para todos os colaboradores elegíveis.</li>
           </ul>
         </div>
       </div>
